--- a/css/styles.css
+++ b/css/styles.css
@@ -144,8 +144,7 @@ body {
 }
 
 .contacts-list {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 331px;
   padding-top: 32px;
   padding-bottom: 32px;
 }
